--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -429,6 +429,10 @@
                         <span>Campaign</span>
                       </button>
                     </th>
+<th scope="col" class="text-sm font-medium text-gray-700 uppercase tracking-wider border-r border-gray-200">
+  <span class="px-6 py-2 block">Actions</span>
+</th>
+                    
                   </tr>
                 </thead>
                 <tbody id="campaignTableBody" class="divide-y">
@@ -452,6 +456,85 @@
 
   <!-- Toast Container -->
   <div id="toastContainer" aria-live="polite" aria-atomic="true"></div>
+
+
+
+<!-- Create Ad Group Modal -->
+<div id="createAdGroupModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
+  <div class="bg-white rounded-lg shadow-lg w-full max-w-2xl p-6 relative">
+    <!-- Close button -->
+    <button id="closeAdGroupModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-700">
+      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+      </svg>
+    </button>
+
+    <h2 class="text-xl font-semibold text-gray-900 mb-6">Create New Ad Group</h2>
+
+    <form id="createAdGroupForm" class="space-y-6 max-h-[75vh] overflow-y-auto pr-2">
+
+      <!-- Ad Group Details -->
+      <div>
+        <h3 class="text-md font-semibold text-gray-800 mb-3">Ad Group Details</h3>
+
+        <label class="block text-sm font-medium text-gray-700 mb-1" for="adGroupName">Ad Group Name</label>
+        <input type="text" id="adGroupName" name="adGroupName" required class="w-full border border-gray-300 rounded px-3 py-2 mb-4"/>
+
+        <label class="block text-sm font-medium text-gray-700 mb-1" for="adGroupCampaign">Campaign</label>
+        <select id="adGroupCampaign" name="adGroupCampaign" required class="w-full border border-gray-300 rounded px-3 py-2 mb-4">
+          <option value="">Select campaign</option>
+          <option>Summer Sale 2024</option>
+          <option>Holiday Campaign</option>
+          <option>Brand Awareness Q3</option>
+          <option>Product Launch</option>
+        </select>
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <div>
+            <label for="adGroupBudget" class="block text-sm font-medium text-gray-700 mb-1">Budget Allocation</label>
+            <input type="text" id="adGroupBudget" name="adGroupBudget" required class="w-full border border-gray-300 rounded px-3 py-2"/>
+          </div>
+          <div>
+            <label for="adGroupBidStrategy" class="block text-sm font-medium text-gray-700 mb-1">Bid Strategy</label>
+            <select id="adGroupBidStrategy" name="adGroupBidStrategy" required class="w-full border border-gray-300 rounded px-3 py-2">
+              <option value="">Select bid strategy</option>
+              <option>Manual CPC</option>
+              <option>Maximize Clicks</option>
+              <option>Target ROAS</option>
+              <option>Enhanced CPC</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <hr class="border-t my-2"/>
+
+      <!-- Creative & Targeting -->
+      <div>
+        <h3 class="text-md font-semibold text-gray-800 mb-3">Creative & Targeting</h3>
+
+        <label for="creativeFormat" class="block text-sm font-medium text-gray-700 mb-1">Creative Format</label>
+        <input type="text" id="creativeFormat" name="creativeFormat" placeholder="e.g., Display Banner, Video 30s" required class="w-full border border-gray-300 rounded px-3 py-2 mb-4"/>
+
+        <label for="targetingRefinements" class="block text-sm font-medium text-gray-700 mb-1">Targeting Refinements</label>
+        <input type="text" id="targetingRefinements" name="targetingRefinements" placeholder="e.g., Job Title: IT Manager, Director" class="w-full border border-gray-300 rounded px-3 py-2 mb-4"/>
+
+        <label for="placementSettings" class="block text-sm font-medium text-gray-700 mb-1">Placement Settings</label>
+        <input type="text" id="placementSettings" name="placementSettings" placeholder="e.g., Business Publications, Premium Inventory" class="w-full border border-gray-300 rounded px-3 py-2"/>
+      </div>
+
+      <!-- Action Buttons -->
+      <div class="flex justify-end space-x-3 pt-4">
+        <button type="button" id="cancelAdGroupModal" class="px-4 py-2 text-sm text-gray-700 border border-gray-300 rounded hover:bg-gray-100">Cancel</button>
+        <button type="submit" class="px-4 py-2 text-sm text-white bg-blue-600 rounded hover:bg-blue-700">Create</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+
+
+
 
   <script>
     // === CONFIGURATION ===
@@ -774,11 +857,19 @@
             tr.innerHTML = `
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.id || ''}</td>
 <td class="px-6 py-1 whitespace-nowrap text-sm font-medium text-gray-900 border-r border-gray-200">
-  <a href="./AdGroupDetails.html?name=${encodeURIComponent(ag.name || '')}" class="text-blue-600 hover:underline">${ag.name || ''}</a>
+  <a href="./AdGroupDetails.html?id=${encodeURIComponent(ag.id)}" class="text-blue-600 hover:underline">
+  ${ag.name || ''}
+</a>
+
 </td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.dsp || ''}</td>
               <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.classification || ''}</td>
-              <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900">${ag.campaign || ''}</td>
+             <td class="px-6 py-1 whitespace-nowrap text-sm text-gray-900 border-r border-gray-200">${ag.campaign || ''}</td>
+<td class="px-6 py-1 whitespace-nowrap text-sm text-center border-r border-gray-200">
+  <button class="text-red-600 hover:underline" onclick="deleteAdGroup('${ag.id}')"
+>Delete</button>
+</td>
+
             `;
             tbody.appendChild(tr);
           });
@@ -845,6 +936,78 @@
         console.warn('Failed to load advertiser data:', e);
       }
     });
+
+
+
+
+
+document.addEventListener('DOMContentLoaded', () => {
+  const form = document.getElementById('createAdGroupForm');
+  const modal = document.getElementById('createAdGroupModal');
+
+  // Open modal
+  document.getElementById('createBtn')?.addEventListener('click', () => {
+    modal.classList.remove('hidden');
+  });
+
+  // Close modal
+  document.getElementById('cancelAdGroupModal')?.addEventListener('click', () => {
+    modal.classList.add('hidden');
+  });
+  document.getElementById('closeAdGroupModal')?.addEventListener('click', () => {
+    modal.classList.add('hidden');
+  });
+
+  // Save new Ad Group
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+
+    const adGroup = {
+      id: 'AG' + Date.now(),
+      name: form.adGroupName.value.trim(),
+      campaign: form.adGroupCampaign.value.trim(),
+      budget: form.adGroupBudget.value.trim(),
+      bidStrategy: form.adGroupBidStrategy.value.trim(),
+      creativeFormat: form.creativeFormat.value.trim(),
+      targetingRefinements: form.targetingRefinements.value.trim(),
+      placementSettings: form.placementSettings.value.trim(),
+      dsp: 'Custom', // optionally adjust
+      classification: 'Custom', // optional fallback
+      source: 'custom'
+    };
+
+    let groups = JSON.parse(localStorage.getItem('adgroups_data_v1') || '[]');
+    groups.push(adGroup);
+    localStorage.setItem('adgroups_data_v1', JSON.stringify(groups));
+
+    modal.classList.add('hidden');
+
+    if (typeof showToast === 'function') showToast('Ad Group Created Successfully');
+
+    if (app && typeof app.loadAdGroups === 'function') {
+      app.loadAdGroups();
+      app.applyFiltersAndRender();
+    }
+  });
+});
+
+function deleteAdGroup(id) {
+  if (!confirm('Are you sure you want to delete this Ad Group?')) return;
+
+  let adgroups = JSON.parse(localStorage.getItem('adgroups_data_v1') || '[]');
+  adgroups = adgroups.filter(ag => ag.id !== id);
+  localStorage.setItem('adgroups_data_v1', JSON.stringify(adgroups));
+
+  if (typeof showToast === 'function') showToast('Ad Group Deleted');
+  if (app && typeof app.loadAdGroups === 'function') {
+    app.loadAdGroups();
+    app.applyFiltersAndRender();
+  }
+}
+
+
+
+
   </script>
 </body>
 </html>
