--- a/WFAdvertiserDetails.html
+++ b/WFAdvertiserDetails.html
@@ -222,7 +222,7 @@
               <!-- General -->
               <section class="space-y-2">
                 <div class="flex items-center justify-between">
-                  <h1 class="text-2xl font-semibold text-gray-900 mx-2">DETAILS</h1>
+                  <h1 class="text-2xl font-semibold text-gray-900 mx-2">ADVERTISER DETAILS</h1>
                   <div class="flex items-center gap-2">
                     <button id="editGeneralBtn" class="text-sm px-3 py-1 bg-white border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50 flex items-center gap-2">
                       <svg viewBox="0 0 24 24" height="16" width="16">
