--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -1330,52 +1330,94 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 
 
-function renderAuditDrawer(campaignId) {
-  const container = document.getElementById('auditDrawerBody');
-  container.innerHTML = '';
+function renderAuditDrawer({ campaignId, advertiserName, advertiserAccount }) {
+  const drawer = document.getElementById('auditDrawer');
+  if (!drawer) return;
 
-  const logs = JSON.parse(localStorage.getItem('audit_log_v1') || '[]')
-  .filter(log => log.campaignId === campaignId && ['campaign', 'adgroup'].includes(log.entityType));
+  const list = drawer.querySelector('[data-audit-list]');
+  const notes = drawer.querySelector('[data-audit-notes]');
+  const ctx = drawer.querySelector('[data-audit-context]');
 
+  if (ctx) {
+    ctx.textContent = `${advertiserName || 'Advertiser'} (${advertiserAccount || 'Account N/A'})`;
+  }
 
-  if (logs.length === 0) {
-    container.innerHTML = '<p class="text-sm italic text-gray-500 px-4 py-2">No logged actions yet.</p>';
+  const entries = getCampaignAudit(campaignId);
+  if (notes) notes.value = loadNotes(campaignId);
+  if (!list) return;
+
+  list.innerHTML = '';
+
+  if (!entries.length) {
+    list.innerHTML = '<p class="text-sm text-gray-500 py-2 italic">No logged actions yet.</p>';
     return;
   }
 
-  logs.forEach(log => {
-    const section = document.createElement('div');
-    section.className = 'border-t border-gray-300 px-4 py-3';
+  // Group logs by entity
+  const grouped = {};
+  entries.forEach(e => {
+    const key = e.entityType + '|' + e.entityId;
+    if (!grouped[key]) grouped[key] = { meta: e, items: [] };
+    grouped[key].items.push(e);
+  });
 
-    const header = document.createElement('div');
-    header.className = 'font-semibold text-sm text-gray-800';
-    header.textContent = `${log.action.toUpperCase()} → ${log.entityType}`;
-    section.appendChild(header);
+  Object.values(grouped).forEach(group => {
+    const title = group.meta.entityType === 'campaign' ? 'Campaign' : 'Ad Group';
+    const entityId = group.meta.entityId;
 
-    const list = document.createElement('ul');
-    list.className = 'text-xs text-gray-700 mt-1 space-y-1';
+    // Accordion container
+    const accordion = document.createElement('div');
+    accordion.className = 'mb-3 border rounded border-gray-200 overflow-hidden';
 
-    if (log.action === 'edit') {
-      const before = log.before || {};
-      const after = log.after || {};
-      Object.keys(after).forEach(key => {
-        if (before[key] !== after[key]) {
-          const li = document.createElement('li');
-          li.textContent = `${key}: ${before[key] || '—'} → ${after[key]}`;
-          list.appendChild(li);
-        }
-      });
-    } else if (log.action === 'create') {
-      const data = log.data || {};
-      Object.entries(data).forEach(([key, value]) => {
-        const li = document.createElement('li');
-        li.textContent = `${key}: ${value}`;
-        list.appendChild(li);
-      });
-    }
+    // Accordion header
+    const header = document.createElement('button');
+    header.className = 'w-full text-left px-4 py-2 bg-gray-100 font-semibold text-sm uppercase hover:bg-gray-200 transition flex justify-between items-center';
+    header.innerHTML = `
+      ${title} (${entityId})
+      <span class="accordion-icon transform transition-transform">&#9662;</span>
+    `;
+    accordion.appendChild(header);
 
-    section.appendChild(list);
-    container.appendChild(section);
+    // Accordion body
+    const body = document.createElement('div');
+    body.className = 'px-4 pb-4 hidden'; // hidden by default
+
+    const ul = document.createElement('ul');
+    ul.className = 'space-y-1';
+
+    group.items.forEach(e => {
+      const li = document.createElement('li');
+      li.className = 'border border-gray-200 rounded-md p-2 bg-white';
+
+      const label = getFieldLabel(e.field);
+      const ts = formatTimestamp(e.ts);
+
+      li.innerHTML = `
+        <div class="flex items-center justify-between">
+          <span class="text-xs font-medium ${e.action === 'create' ? 'text-green-600' : 'text-blue-600'}">${e.action.toUpperCase()}</span>
+          <span class="text-[10px] text-gray-400">${ts}</span>
+        </div>
+        <div class="mt-1 text-xs text-gray-700">
+          <span class="font-semibold">${label}:</span>
+          ${e.action === 'edit' && e.oldValue !== undefined
+            ? `<span class="text-gray-500 line-through mr-1">${e.oldValue || '—'}</span>→ <span class="text-gray-900">${e.newValue || '—'}</span>`
+            : `<span class="text-gray-900">${e.newValue || '—'}</span>`}
+        </div>
+      `;
+
+      ul.appendChild(li);
+    });
+
+    body.appendChild(ul);
+    accordion.appendChild(body);
+    list.appendChild(accordion);
+
+    // Toggle logic
+    header.addEventListener('click', () => {
+      const isHidden = body.classList.contains('hidden');
+      body.classList.toggle('hidden', !isHidden);
+      header.querySelector('.accordion-icon').style.transform = isHidden ? 'rotate(180deg)' : 'rotate(0deg)';
+    });
   });
 }
 
